--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -2,9 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age         workclass  fnlwgt  education  education-num  \\\n",
+      "0   39         State-gov   77516  Bachelors             13   \n",
+      "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+      "2   38           Private  215646    HS-grad              9   \n",
+      "3   53           Private  234721       11th              7   \n",
+      "4   28           Private  338409  Bachelors             13   \n",
+      "\n",
+      "       marital-status         occupation   relationship   race     sex  \\\n",
+      "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+      "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+      "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+      "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+      "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+      "\n",
+      "   capital-gain  capital-loss  hours-per-week native-country salary  \n",
+      "0          2174             0              40  United-States  <=50K  \n",
+      "1             0             0              13  United-States  <=50K  \n",
+      "2             0             0              40  United-States  <=50K  \n",
+      "3             0             0              40  United-States  <=50K  \n",
+      "4             0             0              40           Cuba  <=50K  \n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -12,11 +39,55 @@
     "df = pd.read_csv(\"C:\\\\Users\\\\ASUS\\\\Downloads\\\\Dataset of exploratory data analysis.csv\")\n",
     "print(df.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Age\n",
+      "0  Afnan   34\n",
+      "1  Naima   30\n",
+      "2   Nafi   14\n",
+      "3  Mirza   50\n",
+      "4   Anis   64\n",
+      "5  Hasin   52\n",
+      "6  Sonia   42\n",
+      "7  Nasir   58\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "My_var = { 'Name': [\"Afnan\", \"Naima\", \"Nafi\", \"Mirza\", \"Anis\" , \"Hasin\" , \"Sonia\" , \"Nasir\"], 'Age': [34,30,14,50,64,52,42,58]}\n",
+    "df = pd.DataFrame(My_var)\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
