--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -2,37 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   age         workclass  fnlwgt  education  education-num  \\\n",
-      "0   39         State-gov   77516  Bachelors             13   \n",
-      "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
-      "2   38           Private  215646    HS-grad              9   \n",
-      "3   53           Private  234721       11th              7   \n",
-      "4   28           Private  338409  Bachelors             13   \n",
-      "\n",
-      "       marital-status         occupation   relationship   race     sex  \\\n",
-      "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
-      "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
-      "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
-      "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
-      "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
-      "\n",
-      "   capital-gain  capital-loss  hours-per-week native-country salary  \n",
-      "0          2174             0              40  United-States  <=50K  \n",
-      "1             0             0              13  United-States  <=50K  \n",
-      "2             0             0              40  United-States  <=50K  \n",
-      "3             0             0              40  United-States  <=50K  \n",
-      "4             0             0              40           Cuba  <=50K  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Reading CSV file\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mplt\n",
@@ -42,32 +16,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#taking user input dictionary and making two dimensional dataframe\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "My_var = { 'Name': [\"Afnan\", \"Naima\", \"Nafi\", \"Mirza\", \"Anis\" , \"Hasin\" , \"Sonia\" , \"Nasir\"], 'Age': [34,30,14,50,64,52,42,58]}\n",
+    "df = pd.DataFrame(My_var)\n",
+    "print(df)\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Name  Age\n",
-      "0  Afnan   34\n",
-      "1  Naima   30\n",
-      "2   Nafi   14\n",
-      "3  Mirza   50\n",
-      "4   Anis   64\n",
-      "5  Hasin   52\n",
-      "6  Sonia   42\n",
-      "7  Nasir   58\n"
+      "0    Mirza\n",
+      "1    Afnan\n",
+      "2    Islam\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
+    "#Pandas is classified into two types. They are 1. Data series and  2. Data frame\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "My_var = { 'Name': [\"Afnan\", \"Naima\", \"Nafi\", \"Mirza\", \"Anis\" , \"Hasin\" , \"Sonia\" , \"Nasir\"], 'Age': [34,30,14,50,64,52,42,58]}\n",
-    "df = pd.DataFrame(My_var)\n",
-    "print(df)"
+    "A = [\"Mirza\", \"Afnan\", \"Islam\"]\n",
+    "print(pd.Series(A))"
    ]
   }
  ],
