Locating row and dataframe manipulation

--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -90,13 +90,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Woring with multiple column data with a series function and indexing\n",
+    "#Working with multiple column data with a series function and indexing\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "A = [\"Nafis Al Fuad\", \"30\", \"Male\"]\n",
     "B = [\"Saleha Khatun\", \"27\" , \"Female\"]\n",
     "print(pd.Series(A, index=[\"Name\", \"Age\" , \"Sex\"]))\n",
     "print(pd.Series(B, index=[\"Name\", \"Age\" , \"Sex\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Working with multiple column data with a dataframe function and indexing\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "print(pd.DataFrame([[30,21],[40,20]],columns=[\"Apple\",\"Orange\"], index=[\"Number of Sell in Monday\",\"Number of sell in Tuesday\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame([[20,21],[40,52]], columns=[\"Orange\",\"Apple\"], index=[\"Tuesday\",\"Wednesday\"])\n",
+    "print(df)\n",
+    "print(df.loc['Tuesday'])"
    ]
   }
  ],
