Dataframe and Series is complete

--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -117,11 +117,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Converting multidimensional dataframe into one dimensional series using loc[] method\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "df = pd.DataFrame([[20,21],[40,52]], columns=[\"Orange\",\"Apple\"], index=[\"Tuesday\",\"Wednesday\"])\n",
     "print(df)\n",
     "print(df.loc['Tuesday'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#printing Dataframe shape and head and tail rows\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"d:\\\\Machine Learning\\\\Dataset of exploratory data analysis.csv\")\n",
+    "print(df.head)\n",
+    "print(df.tail)\n",
+    "print(df.shape)"
    ]
   }
  ],
