--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -139,6 +139,69 @@
     "print(df.tail)\n",
     "print(df.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "<bound method DataFrame.to_string of        age         workclass  fnlwgt   education  education-num  \\\n",
+      "0       39         State-gov   77516   Bachelors             13   \n",
+      "1       50  Self-emp-not-inc   83311   Bachelors             13   \n",
+      "2       38           Private  215646     HS-grad              9   \n",
+      "3       53           Private  234721        11th              7   \n",
+      "4       28           Private  338409   Bachelors             13   \n",
+      "...    ...               ...     ...         ...            ...   \n",
+      "32556   27           Private  257302  Assoc-acdm             12   \n",
+      "32557   40           Private  154374     HS-grad              9   \n",
+      "32558   58           Private  151910     HS-grad              9   \n",
+      "32559   22           Private  201490     HS-grad              9   \n",
+      "32560   52      Self-emp-inc  287927     HS-grad              9   \n",
+      "\n",
+      "           marital-status         occupation   relationship   race     sex  \\\n",
+      "0           Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+      "1      Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+      "2                Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+      "3      Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+      "4      Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+      "...                   ...                ...            ...    ...     ...   \n",
+      "32556  Married-civ-spouse       Tech-support           Wife  White  Female   \n",
+      "32557  Married-civ-spouse  Machine-op-inspct        Husband  White    Male   \n",
+      "32558             Widowed       Adm-clerical      Unmarried  White  Female   \n",
+      "32559       Never-married       Adm-clerical      Own-child  White    Male   \n",
+      "32560  Married-civ-spouse    Exec-managerial           Wife  White  Female   \n",
+      "\n",
+      "       capital-gain  capital-loss  hours-per-week native-country salary  \n",
+      "0              2174             0              40  United-States  <=50K  \n",
+      "1                 0             0              13  United-States  <=50K  \n",
+      "2                 0             0              40  United-States  <=50K  \n",
+      "3                 0             0              40  United-States  <=50K  \n",
+      "4                 0             0              40           Cuba  <=50K  \n",
+      "...             ...           ...             ...            ...    ...  \n",
+      "32556             0             0              38  United-States  <=50K  \n",
+      "32557             0             0              40  United-States   >50K  \n",
+      "32558             0             0              40  United-States  <=50K  \n",
+      "32559             0             0              20  United-States  <=50K  \n",
+      "32560         15024             0              40  United-States   >50K  \n",
+      "\n",
+      "[32561 rows x 15 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#printing the number of maximum rows\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"d:\\\\Machine Learning\\\\Dataset of exploratory data analysis.csv\")\n",
+    "print(pd.options.display.max_rows)\n",
+    "#printing how many number of excel rows can the console print\n",
+    "print(df.to_string)"
+   ]
   }
  ],
  "metadata": {
