--- a/Pandas Learning Path.ipynb
+++ b/Pandas Learning Path.ipynb
@@ -533,6 +533,16 @@
     "df['Pulse'].plot(kind=\"hist\") #structure is df[variable that u need to plot in histogram].plot(kind=\"hist\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
